# audius-poc-contract

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
create_and_verify/src/: error.rs  instruction.rs  lib.rs  processor.rs
create_and_verify/tests/: tests.rs
js_client/: audius_instructions.js  index.js  package.json
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
python_listener/: client.py
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: tests.rs
